--- a/IRemember/AndroidManifest.xml
+++ b/IRemember/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="fu.agile.iremember.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="fu.agile.iremember.AddScreen"
-            android:theme="@android:style/Theme.Dialog"
-            android:label="@string/title_activity_add_screen" >
+            android:name=".AddScreen"
+            android:label="@string/title_activity_add_screen"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name=".PhotoCapture"
+            android:label="@string/title_activity_photo_capture" >
         </activity>
     </application>
 
