--- a/IRemember/AndroidManifest.xml
+++ b/IRemember/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -24,8 +29,7 @@
         </activity>
         <activity
             android:name=".AddScreen"
-            android:label="@string/title_activity_add_screen"
-            android:theme="@android:style/Theme.Dialog" >
+            android:label="@string/title_activity_add_screen">
         </activity>
         <activity
             android:name=".PhotoCapture"
