--- a/IRemember/AndroidManifest.xml
+++ b/IRemember/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-	<uses-feature android:name="android.hardware.camera" />
-	<uses-feature android:name="android.hardware.camera.autofocus" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -29,11 +31,15 @@
         </activity>
         <activity
             android:name=".AddScreen"
-            android:label="@string/title_activity_add_screen">
+            android:label="@string/title_activity_add_screen" >
         </activity>
         <activity
             android:name=".PhotoCapture"
             android:label="@string/title_activity_photo_capture" >
+        </activity>
+        <activity
+            android:name=".Recording"
+            android:label="@string/title_activity_recording" >
         </activity>
     </application>
 
