--- a/IRemember/AndroidManifest.xml
+++ b/IRemember/AndroidManifest.xml
@@ -24,8 +24,12 @@
         </activity>
         <activity
             android:name="fu.agile.iremember.AddScreen"
-            android:theme="@android:style/Theme.Dialog"
             android:label="@string/title_activity_add_screen" >
+        </activity>
+        
+        <activity 
+            android:name="fu.agile.iremember.PhotoCapture" 
+            android:label="@string/title_activity_add_screen" > 
         </activity>
     </application>
 
