--- a/IRemember/bin/AndroidManifest.xml
+++ b/IRemember/bin/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:name="fu.agile.iremember.AddScreen"
             android:label="@string/title_activity_add_screen" >
         </activity>
+        
+        <activity 
+            android:name="fu.agile.iremember.PhotoCapture" 
+            android:label="@string/title_activity_add_screen" > 
+        </activity>
     </application>
 
 </manifest>
