--- a/IRemember/AndroidManifest.xml
+++ b/IRemember/AndroidManifest.xml
@@ -31,9 +31,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddScreen"
             android:name="fu.agile.iremember.AddScreen"
-            android:label="@string/title_activity_add_screen" >
+            android:label="@string/hello_world" >
         </activity>
         <activity
             android:name=".Recording"
