--- a/IRemember/bin/AndroidManifest.xml
+++ b/IRemember/bin/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -33,6 +33,9 @@
         <activity
             android:name="fu.agile.iremember.AddScreen"
             android:label="@string/hello_world" >
+        </activity>
+        <activity 
+            android:name="fu.agile.iremember.ViewEvent">  
         </activity>
         <activity
             android:name=".Recording"
